@@ -19,7 +19,6 @@ source "$APPSDIR/system/ramtest/Kconfig"
 source "$APPSDIR/system/readline/Kconfig"
 source "$APPSDIR/system/prun/Kconfig"
 source "$APPSDIR/system/mdio/Kconfig"
-source "$APPSDIR/system/sdcard/Kconfig"
 source "$APPSDIR/system/sudoku/Kconfig"
 source "$APPSDIR/system/lm75/Kconfig"
 source "$APPSDIR/system/vi/Kconfig"
