@@ -102,10 +102,6 @@ ifeq ($(CONFIG_SYSTEM_READLINE),y)
 CONFIGURED_APPS += system/readline
 endif
 
-ifeq ($(CONFIG_SYSTEM_SDCARD),y)
-CONFIGURED_APPS += system/sdcard
-endif
-
 ifeq ($(CONFIG_SYSTEM_SUDOKU),y)
 CONFIGURED_APPS += system/sudoku
 endif
