@@ -38,7 +38,7 @@
 # Sub-directories containing system tasks/libraries
 
 SUBDIRS  = cdcacm cle composite cu flash_eraseall free i2c hex2bin install
-SUBDIRS += hexed lm75 mdio netdb nxplayer ramtest readline sdcard
+SUBDIRS += hexed lm75 mdio netdb nxplayer ramtest readline
 SUBDIRS += stackmonitor sudoku symtab ubloxmodem usbmonitor usbmsc vi
 SUBDIRS += zmodem zoneinfo
 
