@@ -1,14 +1,0 @@
-#
-# For a description of the syntax of this configuration file,
-# see the file kconfig-language.txt in the NuttX tools repository.
-#
-
-config SYSTEM_SDCARD
-	bool "SD Card"
-	default n
-	---help---
-		Enable support for the NSH sdcard command.
-
-if SYSTEM_SDCARD
-endif
-
